feat(day-03):exercise4 add css

--- a/week-01/day-03/exercise4/style.css
+++ b/week-01/day-03/exercise4/style.css
@@ -1,3 +1,14 @@
-body {
-    font-family: 'Segoe UI';
+h1 {
+    color: #EDBA51;
+    font-family: serif;
+    font-weight: 400;
+}
+
+p, xmp {
+    line-height: 1px;
+}
+
+p {
+    margin-left: 15px;
+    letter-spacing: 1px;
 }
