feat(day-03):fix html tags

--- a/week-01/day-03/exercise4/style.css
+++ b/week-01/day-03/exercise4/style.css
@@ -4,11 +4,6 @@ h1 {
     font-weight: 400;
 }
 
-p, xmp {
-    line-height: 1px;
-}
-
-p {
-    margin-left: 15px;
-    letter-spacing: 1px;
+xmp {
+    white-space: pre-wrap;
 }
