--- a/week-01/day-04/style.css
+++ b/week-01/day-04/style.css
@@ -5,7 +5,7 @@ body {
 .back {
     background-color: #DCD6CD;
     width: 820px;
-    height: 805px;
+    height: 900px;
     box-sizing: border-box;
     margin: auto;
     padding-top: 10px;
@@ -23,7 +23,7 @@ body {
 header {
     background-color: #DCD6CD;
     width: 100%;
-    height: 43px; 
+    height: 43px;
 }
 
 h1 {
@@ -50,14 +50,15 @@ h1 {
     background-color: olive;
     width: 312.5px;
     height: 437px;
-    float: right;   
+    float: right;
 }
 
 .content2 {
     background-color: rebeccapurple;
     width: 625px;
-    height: 187px;
-} 
+    height: 250px;
+    margin-top: 16px;
+}
 
 /********************************************all*********************/
 * {
@@ -72,19 +73,13 @@ h1 {
     color: #4A4261;
 }
  /*******************************************personal****************/
-.form1:nth-child(1) {
-    width: 300px;
-    height: 40px;
-    background-color: darkblue;
-    margin: auto;
-}
-
 input[type="text"] {
     display: block;
     width: 298px;
     height: 30px;
     border-radius: 5px;
     border: 1px solid gray;
+    margin: auto;
 }
 
 input[type="number"] {
@@ -114,9 +109,9 @@ input[type="number"] {
 
 .sex {
     height: 62px;
-    float: right; 
-    padding-right: 30px;   
-} 
+    float: right;
+    padding-right: 30px;
+}
 
 .label-sex {
     margin: 0px;
@@ -132,16 +127,31 @@ input[type="number"] {
     width: 100px;
     height: 135px;
     float: left;
+    padding-left: 10px;
 }
 
 .checkbox-right {
     width: 100px;
     height: 135px;
     float: right;
+    padding-right: 50px;
 }
 
 .checkbox-style {
     font-size: 14px;
+}
+
+input[type="checkbox"] {
+    width: 16px;
+    height: 16px;
+}
+
+.note {
+    margin: 0px;
+    padding-top: 10px;
+    padding-left: 10px;
+    font-size: 16px;
+    color: #B4B0AA;
 }
 
 
@@ -156,10 +166,10 @@ h2 {
     margin: auto;
     border-radius: 5px;
     font-size: 20px;
-    color: #FFFFFF;    
+    color: #FFFFFF;
     padding: 10px;
     margin-bottom: 0px;
-    box-sizing: border-box;    
+    box-sizing: border-box;
 }
 
 input[type="tel"],
@@ -179,18 +189,21 @@ select[id="house"] {
 }
 
 .label-style {
-    padding-top: 10px;
     font-weight: bold;
     font-size: 14px;
-    line-height: 40px; 
-    color: #4A4261;   
+    line-height: 40px;
+    color: #4A4261;
     padding-left: 10px;
-} 
+}
 /*******************************************content2****************/
 #intro {
     width: 600px;
     height: 100px;
     margin: auto;
+}
+
+.int > .placeholder {
+    
 }
 
 .cv > input[type="button"] {
@@ -200,20 +213,53 @@ select[id="house"] {
     border-radius: 5px;
     text-transform: uppercase;
     display: block;
+    margin-left: 10px;
+}
+
+.conditions > input[type=checkbox] {
+    margin-left: 10px;
+}
+
+.check-terms {
+    font-size: 14px;   
+}
+
+.conditions {
+    padding-top: 5px;
+}
+
+a {
+    text-decoration-style: red;
+    color: paleturquoise;
 }
 /*******************************************footer******************/
 input[type="submit"] {
-    padding: 10px 70px;
+    padding: 13px 70px;
     text-transform: uppercase;
     background-color: #4F4667;
     color: #DCD6CD;
     border-radius: 5px;
+    margin-left: 10px;    
 }
 
-.save > input[type="button"] {
+input[type="reset"] {
     padding: 15px 24px;
     text-transform: uppercase;
     background-color: #FCFCFC;
     color: #D1D0D6;
-    border-radius: 5px;    
+    border-radius: 5px;
+}
+
+.buttons {
+    width: 100%;
+    height: 103px;
+    margin-top: 20px;
+}
+
+.save {
+    float: left;
+}
+
+.delete {
+    float: right;
 }
