--- a/week-01/day-04/style.css
+++ b/week-01/day-04/style.css
@@ -1,3 +1,4 @@
+/*********************************************background************/
 body {
     margin: 0;
 }
@@ -28,10 +29,11 @@ header {
 
 h1 {
     margin: 0;
+    font-size: 28px;
 }
 
 .content1 {
-    background-color: blue;
+    background-color: #DCD6CD;
     width: 100%;
     height: 437px;
     box-sizing: border-box;
@@ -40,21 +42,21 @@ h1 {
 }
 
 .personal {
-    background-color: yellow;
+    background-color: #DCD6CD;
     width: 312.5px;
     height: 437px;
     float: left;
 }
 
 .contact {
-    background-color: olive;
+    background-color: #DCD6CD;
     width: 312.5px;
     height: 437px;
     float: right;
 }
 
 .content2 {
-    background-color: rebeccapurple;
+    background-color: #DCD6CD;
     width: 625px;
     height: 250px;
     margin-top: 16px;
@@ -154,7 +156,6 @@ input[type="checkbox"] {
     color: #B4B0AA;
 }
 
-
 /*******************************************contact*****************/
 .form2 {
     margin: auto;
@@ -195,6 +196,7 @@ select[id="house"] {
     color: #4A4261;
     padding-left: 10px;
 }
+
 /*******************************************content2****************/
 #intro {
     width: 600px;
@@ -221,17 +223,18 @@ select[id="house"] {
 }
 
 .check-terms {
-    font-size: 14px;   
+    font-size: 14px;
+    color: #9F9C97;  
+}
+
+a {
+    color: #9F9C97;
 }
 
 .conditions {
     padding-top: 5px;
 }
 
-a {
-    text-decoration-style: red;
-    color: paleturquoise;
-}
 /*******************************************footer******************/
 input[type="submit"] {
     padding: 13px 70px;
@@ -248,6 +251,7 @@ input[type="reset"] {
     background-color: #FCFCFC;
     color: #D1D0D6;
     border-radius: 5px;
+    border: 1px solid #938C97;
 }
 
 .buttons {
