--- a/week-01/day-03/exercise3/style.css
+++ b/week-01/day-03/exercise3/style.css
@@ -1,20 +1,37 @@
 body > div {
-    width: 377px;
-    height: 288px;
+    width: 350px;
+    height: 258px;
     background-color: #4285F4;
+    padding: 15px;
 }
 
-div > div {
+.north, .south {
     width: 348px;
     height: 257px;
     margin: auto;
-    padding-top: 16px;
 }
 
-/* div:nth-of-type(1) {
+.north {
     background-color: #E67676;
-} */
+}
 
-/* div:nth-of-type(4) {
+.south {
     background-color: #A9E6E6;
-} */
+}
+
+div:nth-child(2) {
+    margin-top: 5px;
+}
+
+h1 {
+    text-align: center;
+    padding-top: 40px;
+    margin: 0;
+    color: white;
+    font-weight: lighter;
+    font-size: 36px;
+}
+
+h1:nth-child(2) {
+    padding-top: 80px;
+}
