--- a/week-01/day-03/exercise8/style.css
+++ b/week-01/day-03/exercise8/style.css
@@ -4,10 +4,22 @@ div {
     border: 2px solid blue;
 }
 
+div:nth-of-type(2) {
+    margin-top: 12px;
+}
+
 p {
     width: 50px;
     height: 50px;
     display: block;
     float: left;
     background-color: purple;
+    margin-top: 26px;
+    margin-bottom: 26px;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
+p:nth-of-type(1) {
+    margin-left: 16px;
 }
