--- a/week-01/day-03/exercise8/style.css
+++ b/week-01/day-03/exercise8/style.css
@@ -1,11 +1,12 @@
 div {
     width: 695px;
     height: 102px;
-    border: 2px solid blue;
+    border: 2px solid #4285F4;
 }
 
 div:nth-of-type(2) {
     margin-top: 12px;
+    background-color: #FF6347;
 }
 
 p {
@@ -13,7 +14,6 @@ p {
     height: 50px;
     display: block;
     float: left;
-    background-color: purple;
     margin-top: 26px;
     margin-bottom: 26px;
     margin-left: 8px;
@@ -22,4 +22,14 @@ p {
 
 p:nth-of-type(1) {
     margin-left: 16px;
+}
+
+.first-row > p {
+    background-color: #4285F4;
+    color: #4285F4;
+}
+
+.second-row > p {
+    background-color: #643579;
+    color: #643579;
 }
