--- a/week-01/day-03/exercise10/style.css
+++ b/week-01/day-03/exercise10/style.css
@@ -1,31 +1,36 @@
 p {
     font-size: 16px;
     font-family: courier;
+    text-align: center;
+    padding: 17px 34px;
     color: white;
     background-image: url('img/duck.png');
-    width: 265px;    
+    width: 197px;    
+    margin: 0;
 }
 
 p:nth-of-type(1) {
-    height: 105px;
-    background-color: #D27C46;
+    height: 71px;
+    background-color: #FF6347;
     background-size: 25%;
     background-repeat: no-repeat;
     background-position: left;
 }
 
 p:nth-of-type(2) {
-    height: 176px;
+    height: 143px;
     background-color: #643579;
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: center;
+    margin-top: 8px;
 }
 
 p:nth-of-type(3) {
-    height: 248px;
+    height: 213px;
     background-color: #808080;
     background-size: 25%;
     background-repeat: no-repeat;
     background-position: bottom right;
+    margin-top: 8px;    
 }
