--- a/week-07/day-01/FirstWebApp/FirstWebApp/Views/Web/Greeting.cshtml
+++ b/week-07/day-01/FirstWebApp/FirstWebApp/Views/Web/Greeting.cshtml
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p>
-            Hello, @Model.Content!
+            Hello, Your @Model.Content! This site was loaded @Model.Id times since last server start.
         </p>
     </body>
 </html>
