feat(day-03): add Simba Part II

--- a/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Index.cshtml
+++ b/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
         <tr>
             <td>@Model.Name</td>
             <td>@Model.Balance</td>
+            <td>@Model.Currency</td>
             <td>@Model.AnimalType</td>
         </tr>
     </table>
