--- a/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Characters.cshtml
+++ b/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Characters.cshtml
@@ -11,5 +11,16 @@
                 </tr>
         }
     </table>
-
+    <table style="width:100%">
+        @for (int i = 0; i < Model.BankAccountList.Count; i++)
+        {
+            <tr>
+                <td>@i</td>
+                <td>@Model.BankAccountList[i].Name</td>
+                <td>@Model.BankAccountList[i].Balance</td>
+                <td>@Model.BankAccountList[i].Currency</td>
+                <td>@Model.BankAccountList[i].AnimalType</td>
+            </tr>
+        }
+    </table>
 }
