feat(day-03): add Simba Part VII

--- a/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Characters.cshtml
+++ b/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Characters.cshtml
@@ -23,8 +23,21 @@
 
                 @if (Model.BankAccountList[i].Status == "King")
                 {
-                <td> <span>@Model.BankAccountList[i].Status </span></td>
+                    <td> <span>@Model.BankAccountList[i].Status </span></td>
+                }
+                else
+                {
+                    <td></td>
 
+                }
+
+                @if(Model.BankAccountList[i].Bad_Good == true)
+                {
+                    <td>Good</td>
+                }
+                else
+                {
+                    <td>Bad</td>
                 }
             </tr>
         }
