--- a/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Characters.cshtml
+++ b/week-07/day-03/BankOfSimba/BankOfSimba/Views/Home/Characters.cshtml
@@ -11,6 +11,7 @@
                 </tr>
         }
     </table>
+
     <table style = "width:100%">
          @for(int i = 0; i < Model.BankAccountList.Count; i++)
         {
@@ -42,4 +43,37 @@
             </tr>
         }
     </table>
+
+    <form action="/add" method="post">
+        Name:
+        <input type="text" name="Name">
+        <br />
+        Balance:
+        <input type="text" name="Balance">
+        <br />
+        Currency:
+        <input type="text" name="Currency">
+        <br />
+        Type:
+        <input type="text" name="AnimalType">
+        <br />
+        <input type="submit" value="Submit">
+    </form>
+
+    <form action="/addcurrency" method="post">
+        Raise currency:
+        @foreach (var animal in Model.BankAccountList)
+        {
+            @if (animal.Status == "King")
+            {
+                animal.Balance += 100;
+            }
+            else
+            {
+                animal.Balance += 10;
+
+            }
+        }
+        <input type="submit" value="Raise currency">
+    </form>
 }
