--- a/week-07/FoxClub/FoxClub/Views/Fox/Tricks.cshtml
+++ b/week-07/FoxClub/FoxClub/Views/Fox/Tricks.cshtml
@@ -7,13 +7,13 @@
 <body>
     <ul>
         <li><a href="/">Information</a></li>
-        <li><a href="/nutrition">Nutrition Store</a></li>
-        <li><a href="/tricks">Trick Center</a></li>
+        <li><a href="/nutrition/@Model.Name">Nutrition Store</a></li>
+        <li><a href="/tricks/@Model.Name">Trick Center</a></li>
         <li><a href="/">Action History</a></li>
     </ul>
     <form action="addtrick" method="post">
         <p>Tricks</p>
-        <select type="text" name="listoftricks">
+        <select type="text" name="trick">
             <option value="sit">Sit</option>
             <option value="walk on two legs">Walk on two legs</option>
             <option value="sing">Sing</option>
