--- a/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Update.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Update.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Edit todo</h1>
-    <form class="form-inline" action="/@Model.Id/edit/update" method="post">
+    <form class="form-inline" action="/@Model.TodoId/edit/update" method="post">
         <h4>Todo Description</h4>
         <input type="text" name="title" />
         <h4>Urgent</h4>
