--- a/week-07/FoxClub/FoxClub/Views/Home/Index.cshtml
+++ b/week-07/FoxClub/FoxClub/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 <body>
     <ul>
         <li><a href="/">Information</a></li>
-        <li><a href="/nutrition/@Model.Name">Nutrition Store</a></li>
-        <li><a href="/tricks/@Model.Name">Trick Center</a></li>
+        <li><a href="/nutrition">Nutrition Store</a></li>
+        <li><a href="/tricks">Trick Center</a></li>
         <li><a href="/">Action History</a></li>
     </ul>
     <img src="https://raw.githubusercontent.com/greenfox-academy/teaching-materials/master/project/programmer-fox-club/assets/greenfox.png?token=AWiat3UlJJnzdQwYsGuNVNQ5rKKrrAUpks5aY06ewA%3D%3D" alt="Fox">
