--- a/week-08/Reddit/Reddit/Views/User/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/User/Index.cshtml
@@ -1,2 +1,21 @@
-﻿@page
+﻿@model Reddit.Models.User
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Login</title>
+    <meta lang="en" charset="utf-8" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+    <form class="form-inline" action="/name" method="post">
+        <div class="form-group">
+            <label class="sr-only">Username</label>
+            <input type="email" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-default">Sign in</button>
+    </form>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
 
