feat(Reddit): add methods to get the user's data

--- a/week-08/Reddit/Reddit/Views/User/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/User/Index.cshtml
@@ -8,6 +8,7 @@
 </head>
 <body>
     <form class="form-inline" action="/name" method="post">
+        <h4>Username:</h4>
         <div class="form-group">
             <label class="sr-only">Username</label>
             <input type="email" class="form-control">
