--- a/week-08/Reddit/Reddit/Views/Home/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/Home/Index.cshtml
@@ -1,4 +1,36 @@
-﻿@page
-@model IndexModel
-@{
-}
+﻿@model List<Reddit.Models.User>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Reddit</title>
+    <meta lang="en" charset="utf-8" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+    <a href="/createpost">Add new post</a>
+    <h1>Posts</h1>
+    <form action="/score_add" method="post">
+        <table>
+            <tr>
+                <th>SCORE</th>
+                <th>Actions</th>
+                <th>Content</th>
+            </tr>
+            @foreach (var element in Model)
+            {
+                @foreach (var item in element.Post)
+                {
+                    <tr>
+                        <td>@item.Score</td>
+                        <td><input type="button" /></td>
+                        <td><input type="button" formaction="/score_decrease" /></td>
+                        <td>@item.Content</td>
+                    </tr>
+                }
+            }
+        </table>
+    </form>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
