--- a/week-08/Reddit/Reddit/Views/User/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/User/Index.cshtml
@@ -11,7 +11,7 @@
         <h4>Username:</h4>
         <div class="form-group">
             <label class="sr-only">Username</label>
-            <input type="email" class="form-control">
+            <input type="text" name="username" class="form-control">
         </div>
         <button type="submit" class="btn btn-default">Sign in</button>
     </form>
