feat(Reddit): add posts to the database part is working

--- a/week-08/Reddit/Reddit/Views/Home/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/Home/Index.cshtml
@@ -22,8 +22,8 @@
                 {
                     <tr>
                         <td>@item.Score</td>
-                        <td><input type="button" /></td>
-                        <td><input type="button" formaction="/score_decrease" /></td>
+                        <td><input type="button" name="score" /></td>
+                        <td><input type="button" name="score" formaction="/score_decrease" /></td>
                         <td>@item.Content</td>
                     </tr>
                 }
