--- a/week-08/Reddit/Reddit/Views/Post/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/Post/Index.cshtml
@@ -1,2 +1,18 @@
-﻿@model IndexModel
-
+﻿@model Reddit.Models.Post
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Add posts</title>
+    <meta lang="en" charset="utf-8" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+    <form action="add" method="post">
+        <p>Content:</p>
+        <input type="text" name="content" />
+        <input type="submit" value="Submit" />
+    </form>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
