--- a/week-08/Reddit/Reddit/Views/Home/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Reddit.Models.User>
+﻿@model List<Reddit.Models.Post>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -16,16 +16,23 @@
                 <th>Actions</th>
                 <th>Content</th>
             </tr>
-            @foreach (var element in Model)
+            @if (Model.Count == 0)
             {
-                @foreach (var item in element.Post)
+                <tr>
+                    <td>No posts</td>
+                </tr>
+            }
+            else
+            {
+                @foreach (var element in Model)
                 {
                     <tr>
-                        <td>@item.Score</td>
+                        <td>@element.Score</td>
                         <td><input type="button" name="score" /></td>
                         <td><input type="button" name="score" formaction="/score_decrease" /></td>
-                        <td>@item.Content</td>
+                        <td>@element.Content</td>
                     </tr>
+
                 }
             }
         </table>
