--- a/week-08/Reddit/Reddit/Views/User/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/User/Index.cshtml
@@ -7,7 +7,7 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <form class="form-inline" action="/name" method="post">
+    <form class="form-inline" action="/username" method="post">
         <h4>Username:</h4>
         <div class="form-group">
             <label class="sr-only">Username</label>
