--- a/week-08/Reddit/Reddit/Views/Home/Index.cshtml
+++ b/week-08/Reddit/Reddit/Views/Home/Index.cshtml
@@ -8,10 +8,9 @@
 </head>
 <body>
     <p>Hello @Model.User.Username</p>
-    <form action="/createpost" method="get">
+    <form action="/createpost?username="@Model.User.Username" method="get">
         <input type="submit" value="add new post" />
         <input type="hidden" name="username" value="@Model.User.Username" />
-        <a href="/createpost">Add new post</a>
         </form>
     <h1>Posts</h1>
     <form action="/score_add" method="post">
