--- a/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
+++ b/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
@@ -1,10 +1,15 @@
-﻿@model IndexModel
+﻿@model Reddit2.Models.Post
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+    <p>Content</p>
+    <form action="" method="post">
+        <input type="text" name="Content" />
+        <input type="submit" value="Submit" />
+    </form>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
