--- a/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
+++ b/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
@@ -1,14 +1,39 @@
-﻿@model Reddit2.Models.Post
+﻿@model List<Reddit2.Models.Post>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>Login Page</title>
+    <meta charset="utf-8" lang="en" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <p>Content</p>
+    <a href="/addcontent">Add new post</a>
+    <h1>Posts</h1>
     <form action="" method="post">
-        <input type="text" name="Content" />
-        <input type="submit" value="Submit" />
+        <table>
+            <tr>
+                <th>SCORE</th>
+                <th>Actions</th>
+                <th>Actions</th>
+                <th>Content</th>
+            </tr>
+            @if (Model.Count == 0)
+            {
+                <tr>No posts</tr>
+            }
+            else
+            {
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Score</td>
+                    <td><a href="/addscore"></a>+</td>
+                    <td><a href="/decreasescore"></a>-</td>
+                    <td>@item.Content</td>
+                </tr>
+            }
+            }
+        </table>
     </form>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
