feat(Reddit2): add score logic and datetime column

--- a/week-08/Reddit2/Reddit2/Views/Content/Index.cshtml
+++ b/week-08/Reddit2/Reddit2/Views/Content/Index.cshtml
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>Content</p>
-    <form action="" method="post">
+    <form action="add" method="post">
         <input type="text" name="Content" />
         <input type="submit" value="Submit" />
     </form>
