--- a/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
+++ b/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Login Page</title>
+    <title>Posts</title>
     <meta charset="utf-8" lang="en" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
@@ -16,6 +16,7 @@
                 <th>Actions</th>
                 <th>Actions</th>
                 <th>Content</th>
+                <th>Date</th>
             </tr>
             @if (Model.Count == 0)
             {
@@ -27,9 +28,9 @@
             {
                 <tr>
                     <td>@item.Score</td>
-                    <td><a href="/addscore"></a>+</td>
-                    <td><a href="/decreasescore"></a>-</td>
+                    <td><a href="/addscore/@item.PostId">+</a><a href="/decreasescrore/@item.PostId">-</a></td>
                     <td>@item.Content</td>
+                    <td>@item.DateTime</td>
                 </tr>
             }
             }
