--- a/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
+++ b/week-08/Reddit2/Reddit2/Views/Post/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Reddit2.Models.Post>
+﻿@model Reddit2.ViewModels.PostViewModel
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -8,23 +8,51 @@
 </head>
 <body>
     <a href="/addcontent">Add new post</a>
+    <h1>Best 10 posts</h1>
+    <table class="table table-striped">
+        <tr>
+            <th>Rank</th>
+            <th>Score</th>
+            <th>Actions</th>
+            <th>Content</th>
+            <th>Date</th>
+        </tr>
+        @if (Model.BestTen.Count == 0)
+        {
+            <tr>No posts</tr>
+        }
+        else
+        {
+            var counter = 0;
+            @foreach (var item in Model.BestTen)
+            {
+                counter++;
+                <tr>
+                    <td>@counter</td>
+                    <td>@item.Score</td>
+                    <td><a href="/addscore/@item.PostId">+</a><a href="/decreasescrore/@item.PostId">-</a></td>
+                    <td>@item.Content</td>
+                    <td>@item.DateTime</td>
+                </tr>
+            }
+        }
+    </table>
     <h1>Posts</h1>
     <form action="" method="post">
-        <table>
+        <table class="table table-striped">
             <tr>
-                <th>SCORE</th>
-                <th>Actions</th>
+                <th>Score</th>
                 <th>Actions</th>
                 <th>Content</th>
                 <th>Date</th>
             </tr>
-            @if (Model.Count == 0)
+            @if (Model.AllPosts.Count == 0)
             {
                 <tr>No posts</tr>
             }
             else
             {
-            @foreach (var item in Model)
+            @foreach (var item in Model.AllPosts)
             {
                 <tr>
                     <td>@item.Score</td>
