feat(Reddit): add login

--- a/week-08/Reddit2/Reddit2/Views/Content/Content.cshtml
+++ b/week-08/Reddit2/Reddit2/Views/Content/Content.cshtml
@@ -1,8 +1,9 @@
-﻿@model Reddit2.Models.Post
+﻿@model Reddit2.ViewModels.PostViewModel
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>Add Post</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <meta charset="utf-8" lang="en" />
 </head>
 <body>
     <h2 class="text-center">Content</h2>
@@ -15,8 +16,8 @@
                 <button type="submit" class="btn btn-success">Submit</button>
             </form>
         </div>
-        <div class="col-xs-6 col-md-2"></div>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <div class="col-xs-6 col-md-2"></div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
