--- a/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Index.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8" lang="en">
     <title>Todo</title>
@@ -9,19 +10,30 @@
         <div class="form-group">
             <h4>Title</h4>
             <label class="sr-only">Title</label>
-            <input type="text" name="title" class="form-control" id="exampleInputEmail3" placeholder="Title">
+            <input type="text" name="title" class="form-control" >
+        </div>
+        <br />
+        <div class="form-group">
+            <h4>Description</h4>
+            <label class="sr-only">Description</label>
+            <input type="text" name="description" class="form-control">
+        </div>
+        <br /><div class="form-group">
+            <h4>Content</h4>
+            <label class="sr-only">Content</label>
+            <input type="text" name="content" class="form-control">
         </div>
         <br />
         <div class="form-group">
             <h4>Urgent</h4>
             <label class="sr-only">Urgent</label>
-            <input type="text" name="isurgent" class="form-control" id="exampleInputPassword3" placeholder="True/False">
+            <input type="text" name="isurgent" class="form-control" placeholder="True/False">
         </div>
         <br />
         <div class="form-group">
             <h4>Done</h4>
             <label class="sr-only">Done</label>
-            <input type="text" name="isdone" class="form-control" id="exampleInputPassword3" placeholder="True/False">
+            <input type="text" name="isdone" class="form-control" placeholder="True/False">
         </div>
         <br />
         <button type="submit" class="btn btn-default">Submit</button>
