--- a/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/List.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/List.cshtml
@@ -6,12 +6,16 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+    <h4>Search</h4>
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <h1>Todos</h1>
     <form class="form-inline" action="/delete" method="post">
-        <table class="table table-striped">
+        <table id="myTable" class="table table-striped">
             <tr>
                 <th>Id</th>
                 <th>Title</th>
+                <th>Description</th>
+                <th>Content</th>
                 <th>Urgent</th>
                 <th>Done</th>
                 <th>Delete</th>
@@ -22,6 +26,8 @@
                     <tr>
                         <td>@item.TodoId</td>
                         <td>@item.Title</td>
+                        <td>@item.Description</td>
+                        <td>@item.Content</td>
                         <td>@item.IsUrgent</td>
                         <td>@item.IsDone</td>
                         <td><a href="@item.TodoId/delete">Delete</a></td>
@@ -30,6 +36,45 @@
                 }
         </table>
     </form>
+    <script>
+        function myFunction() {
+            var input, filter, table, tr, td, i;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("myTable");
+            tr = table.getElementsByTagName("tr");
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[1];
+                if (td) {
+                    if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[2];
+                if (td) {
+                    if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[3];
+                if (td) {
+                    if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
