--- a/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Index.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Index.cshtml
@@ -36,7 +36,10 @@
             <input type="text" name="isdone" class="form-control" placeholder="True/False">
         </div>
         <br />
+        <br />
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
