--- a/week-08/day-01/TodoSQL/TodoSQL/Views/User/Assignees.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/User/Assignees.cshtml
@@ -11,11 +11,11 @@
     <form class="form-inline" action="adduser" method="post">
         <div class="form-group">
             <label>Name</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" name="name">
         </div>
         <div class="form-group">
             <label>Email</label>
-            <input type="email" class="form-control">
+            <input type="email" class="form-control" name="email">
         </div>
         <button type="submit" class="btn btn-default">Add User</button>
     </form>
