feat(Todo): add a lot of things

--- a/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Update.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Update.cshtml
@@ -14,6 +14,7 @@
         <input type="checkbox" name="isurgent" />
         <h4>Done</h4>
         <input type="checkbox" name="isdone" />
+        <input type="hidden" name="todoid" value="@Model.TodoId" />
         <input type="submit" value="Submit" />
         <a href="/list">Cancel</a>
     </form>
