feat(Todo): I can add data in both databases at the same time

--- a/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Index.cshtml
+++ b/week-08/day-01/TodoSQL/TodoSQL/Views/Todo/Index.cshtml
@@ -8,6 +8,18 @@
 <body>
     <form class="form-inline" action="/add" method="post">
         <div class="form-group">
+            <h4>Name</h4>
+            <label class="sr-only">Name</label>
+            <input type="text" name="name" class="form-control">
+        </div>
+        <br />
+        <div class="form-group">
+            <h4>Email</h4>
+            <label class="sr-only">Email</label>
+            <input type="text" name="email" class="form-control">
+        </div>
+        <br />
+        <div class="form-group">
             <h4>Title</h4>
             <label class="sr-only">Title</label>
             <input type="text" name="title" class="form-control" >
